--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FOCUS - From ADHD to Life</title>
+    <title>FOCUS - The Story of AD(H)D</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -77,8 +77,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">FOCUS</h1>
-                        <p class="intro-text">A game about Attention Deficit Hyperactivity Disorder (ADHD)<br>By Rahel Golub.</p>
+                        <h1 class="brand-heading">FOCUS!</h1>
+                        <p class="intro-text">A game about Attention Deficit Hyperactivity Disorder (AD(H)D)<br>By Rahel Golub.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -93,8 +93,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About FOCUS</h2>
-                <p>FOCUS is part of my final degree project in Computational Journalism.
-                The whole project is composed by the <a href="#game">game</a>, an <a href="#article">article</a> and the dissertation per se. This text should be longer and well written. I leave that to you. Love you soooo much! </p>
+                <p>FOCUS is part of my final degree project in Computational Journalism. 
+                The whole project is composed by the <a href="#game">game</a>, an <a href="#article">article</a> and the dissertation per se. My project aims to help the public develop a greater understanding of AD(H)D. </p>
             </div>
         </div>
     </section>
