--- a/article.html
+++ b/article.html
@@ -19,7 +19,8 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
+        type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -78,7 +79,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">FOCUS!</h1>
-                        <p class="intro-text">A game about Attention Deficit Hyperactivity Disorder (AD(H)D)<br>By Rahel Golub.</p>
+                        <p class="intro-text">A game about Attention Deficit Hyperactivity Disorder (AD(H)D)<br>By Rahel
+                            Golub.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -93,8 +95,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About FOCUS</h2>
-                <p>FOCUS is part of my final degree project in Computational Journalism. 
-                The whole project is composed by the <a href="#game">game</a>, an <a href="#article">article</a> and the dissertation per se. My project aims to help the public develop a greater understanding of AD(H)D. </p>
+                <p>FOCUS is part of my final degree project in Computational Journalism.
+                    The whole project is composed by the <a href="#game">game</a>, an <a href="#article">article</a> and
+                    the dissertation per se. My project aims to help the public develop a greater understanding of
+                    AD(H)D. </p>
             </div>
         </div>
     </section>
@@ -105,16 +109,18 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Play the game!</h2>
-                    <p>The FOCUS game is the key component of this dissertation.You can play it by clicking the button below.</p>
+                    <p>The FOCUS game is the key component of this dissertation.You can play it by clicking the button
+                        below.</p>
                     <a href="http://adhdfocus.herokuapp.com/" class="btn btn-default btn-lg">PLAY</a>
                 </div>
             </div>
-        </div>        
-        <div id="article"  class="article-section">
+        </div>
+        <div id="article" class="article-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Read the article!</h2>
-                    <p> The game would not be complete without the article.</p><p>To read it, please download it by clicking the button below.</p>
+                    <p> The game would not be complete without the article.</p>
+                    <p>To read it, please download it by clicking the button below.</p>
                     <a href="article.html" class="btn btn-default btn-lg">READ</a>
                 </div>
             </div>
@@ -134,7 +140,8 @@
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://github.com/HappyBat" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/HappyBat" class="btn btn-default btn-lg"><i
+                                class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                 </ul>
             </div>
