--- a/game.html
+++ b/game.html
@@ -19,9 +19,10 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
+        type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link rel="icon" type="image/png" href="favicon6.png"/>
+    <link rel="icon" type="image/png" href="favicon6.png" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -54,7 +55,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a href="index.html">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Game</a>
@@ -71,46 +72,37 @@
         </div>
         <!-- /.container -->
     </nav>
+    <!--<div id="download" class="game-section">
+        <div class="container">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Play the game!</h2>
+                <p>Play the game on it's own website by clicking "play" or give it a go right here!</p>
+                <a href="http://adhdfocus.herokuapp.com/" class="btn btn-default btn-lg">PLAY</a>
+            </div>
+        </div>
+    </div>-->
+        <header class="intro">
+            <div class="intro-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-8 col-md-offset-2">
+                            <h1 class="brand-heading">Play the game!</h1>
+                            <p class="intro-text">Play the game on it's own website by clicking "play" or give it a go right here!</p>
+                           <p> <a href="http://adhdfocus.herokuapp.com/" class="btn btn-default btn-lg">PLAY</a></p>
 
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">FOCUS!</h1>
-                        <p class="intro-text">A game about Attention Deficit Hyperactivity Disorder (AD(H)D)<br>By Rahel Golub.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
+                            <a href="#game" class="btn btn-circle page-scroll">
+                                <i class="fa fa-angle-double-down animated"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About FOCUS</h2>
-                <p>FOCUS is part of my final degree project in Computational Journalism. 
-                The whole project is composed by the <a href="#game">game</a>, an <a href="#article">article</a> and the dissertation per se. My project aims to help the public develop a greater understanding of AD(H)D. </p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Download Section -->
-    <section class="content-section text-center">
-        <div id="download" class="game-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Play the game!</h2>
-                    <p>The FOCUS game is the key component of this dissertation.You can play it by clicking the button below.</p>
-                    <a href="game.html" class="btn btn-default btn-lg">PLAY</a>
-                </div>
-            </div>
-        </div>        
+        </header>
+    <div id = "game" class="container content-section text-center">
+        <iframe class=".embed-responsive iframe," src="http://adhdfocus.herokuapp.com/" width="100%" height="700"
+            style="border:1px solid black;allowfullscreen:true;overflow:hidden;" scrolling="no"
+            title="FOCUS! - The AD(H)D Web Game">
+        </iframe>
         <div id="article"  class="article-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
@@ -120,49 +112,48 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Download Section
-    <section id="article" class="content-section text-center">
-    </section> -->
+    </div>
 
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact</h2>
-                <p>For any inquiries regarding the game or the thesis, please send an email to the following address</p>
-                <p><a href="mailto:feedback@startbootstrap.com">golubr@cardiff.ac.uk</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://github.com/HappyBat" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Rahel Golub - Cardiff University 2020</p>
-        </div>
-    </footer>
+            <section id="contact" class="container content-section text-center">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h2>Contact</h2>
+                        <p>For any inquiries regarding the game or the thesis, please send an email to the following
+                            address</p>
+                        <p><a href="mailto:feedback@startbootstrap.com">golubr@cardiff.ac.uk</a>
+                        </p>
+                        <ul class="list-inline banner-social-buttons">
+                            <li>
+                                <a href="https://github.com/HappyBat" class="btn btn-default btn-lg"><i
+                                        class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+            <!-- Footer -->
+            <footer>
+                <div class="container text-center">
+                    <p>Copyright &copy; Rahel Golub - Cardiff University 2020</p>
+                </div>
+            </footer>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+            <!-- jQuery -->
+            <script src="js/jquery.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
+            <!-- Bootstrap Core JavaScript -->
+            <script src="js/bootstrap.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ 
+            <!-- Plugin JavaScript -->
+            <script src="js/jquery.easing.min.js"></script>
+
+            <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
     -->
-    <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
+            <!-- Custom Theme JavaScript -->
+            <script src="js/grayscale.js"></script>
 
 </body>
 
