checking if googlefonts are security problem for iframe

--- a/game.html
+++ b/game.html
@@ -19,9 +19,9 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
+    <!--<link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet"
         type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">-->
     <link rel="icon" type="image/png" href="favicon6.png" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -100,7 +100,7 @@
         </header>
     <div id = "game" class="container content-section text-center">
         <iframe class=".embed-responsive iframe," src="http://adhdfocus.herokuapp.com/" width="100%" height="700"
-            style="border:1px solid black;allowfullscreen:true;overflow:hidden;" scrolling="no"
+            style="allowfullscreen:true;overflow:hidden;border:none;" scrolling="no"
             title="FOCUS! - The AD(H)D Web Game">
         </iframe>
         <div id="article"  class="article-section">
