--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Play the game!</h2>
                     <p>The FOCUS game is the key component of this dissertation.You can play it by clicking the button below.</p>
-                    <a href="game.html" class="btn btn-default btn-lg">PLAY</a>
+                    <a href="http://adhdfocus.herokuapp.com/" class="btn btn-default btn-lg">PLAY</a>
                 </div>
             </div>
         </div>        
@@ -116,7 +116,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Read the article!</h2>
                     <p> The game would not be complete without the article.</p><p>To read it, please download it by clicking the button below.</p>
-                    <a href="article.html" class="btn btn-default btn-lg">READ</a>
+                    <a href="https://github.com/HappyBat/happybat.github.io/raw/master/article.pdf" class="btn btn-default btn-lg">READ</a>
                 </div>
             </div>
         </div>
