--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
                 <p>For any inquiries regarding the game or the thesis, please send an email to the following address</p>
-                <p><a href="mailto:feedback@startbootstrap.com">golubr@cardiff.ac.uk</a>
+                <p><a href="mailto:golubr@cardiff.ac.uk">golubr@cardiff.ac.uk</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
